erDiagram
    roles ||--o{ users : assigns
    users ||--o{ user_activities : performs
    users ||--o{ revoked_tokens : revokes
    shops ||--o{ revoked_tokens : revokes
    users ||--o{ orders : places
    users o|--o{ order_logs : changes
    shops ||--o{ shop_staffs : employs
    shops ||--o{ shop_categories : classified_as
    categories ||--o{ shop_categories : includes
    shops ||--o{ menus : offers
    menus ||--|{ menu_genres : classified_as
    genres ||--o{ menu_genres : groups
    shops ||--o{ orders : receives
    shops ||--o{ payment_accounts : owns
    payment_methods ||--o{ payment_accounts : provides
    payment_accounts ||--o{ orders : paid_to
    orders ||--|{ order_menus : contains
    menus ||--o{ order_menus : selected_as
    orders ||--o{ order_logs : tracks

    roles {
        BIGINT id PK
        VARCHAR name UK
        BOOLEAN is_active
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    users {
        BIGINT id PK
        VARCHAR username UK
        VARCHAR email UK
        VARCHAR fullname
        BIGINT role_id FK
        BIGINT department_id
        VARCHAR password
        BOOLEAN is_active
        VARCHAR type
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    user_activities {
        BIGINT id PK
        BIGINT user_id FK
        BIGINT shop_id FK
        TEXT activity
        DATETIME active_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    revoked_tokens {
        BIGINT id PK
        VARCHAR jti UK
        BIGINT user_id FK
        DATETIME expires_at
        DATETIME revoked_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    shops {
        BIGINT id PK
        VARCHAR name
        TEXT description
        VARCHAR logo_url
        VARCHAR domain_url
        TEXT login_url
        VARCHAR location
        BOOLEAN is_active
        VARCHAR email UK
        VARCHAR password
        TIME open_at
        TIME close_at
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    shop_staffs {
        BIGINT id PK
        BIGINT shop_id FK
        VARCHAR name
        VARCHAR role
        VARCHAR email UK
        VARCHAR phone
        BOOLEAN is_active
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    categories {
        BIGINT id PK
        VARCHAR name UK
        BOOLEAN is_active
        TEXT description
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    shop_categories {
        BIGINT id PK
        BIGINT shop_id FK
        BIGINT category_id FK
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    genres {
        BIGINT id PK
        VARCHAR name UK
        BOOLEAN is_active
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    menus {
        BIGINT id PK
        BIGINT shop_id FK
        VARCHAR name
        DECIMAL cost
        BOOLEAN is_available
        VARCHAR image
        TEXT description
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    menu_genres {
        BIGINT id PK
        BIGINT menu_id FK
        BIGINT genre_id FK
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    payment_methods {
        BIGINT id PK
        VARCHAR name UK
        TEXT description
        VARCHAR logo
        VARCHAR domain_url
        BOOLEAN is_active
        VARCHAR type
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    payment_accounts {
        BIGINT id PK
        BIGINT shop_id FK
        BIGINT payment_method_id FK
        VARCHAR account_holder_name
        VARCHAR account_number
        BOOLEAN is_active
        VARCHAR image
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    orders {
        BIGINT id PK
        BIGINT shop_id FK
        BIGINT user_id FK
        VARCHAR user_email
        VARCHAR order_code UK
        VARCHAR status
        DATETIME order_at
        DECIMAL subtotal_amount
        DECIMAL total_amount
        TEXT remark
        BIGINT payment_account_id FK
        DECIMAL tax_fee
        DECIMAL service_fee
        BOOLEAN is_pickup
        VARCHAR delivery_location
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    order_menus {
        BIGINT id PK
        BIGINT order_id FK
        BIGINT menu_id FK
        BIGINT quantity
        DECIMAL amount
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
    order_logs {
        BIGINT id PK
        BIGINT order_id FK
        VARCHAR status
        BIGINT user_id FK
        TIMESTAMP created_at
        TIMESTAMP updated_at
    }
